K8S/auctionator-house-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: auctionatorhousenp-srv
spec:
  type: NodePort
  selector:
    app: auctionator-house
  ports:
    - name: auctionator-house
      protocol: TCP
      port: 80
      targetPort: 80
