K8S/auctionator-items-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auctionator-items-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auctionator-items
  template:
    metadata:
      labels:
        app: auctionator-items
    spec:
      containers:
        - name: auctionator-items
          image: kingzaro/auctionator.items:latest
---
apiVersion: v1
kind: Service
metadata:
  name: items-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: auctionator-items
  ports:
  - name: auctionator-items
    protocol: TCP
    port: 80
    targetPort: 80
  - name: itemsgrpc
    protocol: TCP
    port: 666
    targetPort: 666
