K8S/auctionator-items-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: auctionatoritemsnp-srv
spec:
  type: NodePort
  selector:
    app: auctionator-items
  ports:
    - name: auctionator-items
      protocol: TCP
      port: 80
      targetPort: 80
